Fixes a min-width bug and a text wrapping bug

--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,7 @@ main elements
 #location,
 #the-team {
   height: 1140px;
+  min-width: 960px;
   width: 100%;
   position: relative;
 }
@@ -162,6 +163,7 @@ main-nav
 ul.main-nav {
   float: left;
   margin: 4px 0 0 10px;
+  white-space: nowrap;
   width: 100px;
   z-index: 1000;
 }
